Created a Register component/route, copied it over from Tori. Added a new font (Museo Sans, from Typekit) and lots of other styling. Added a React Form plugin, have not yet configured it though.

--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -6,8 +6,8 @@ $sky:         #D4E8F5;
 $fadedteal:   #579098;
 $fadedsky:    #90B0C4;
 
-$offwhite:    #EFF0E8;
 $white:       #FFFFFF;
+$lightgray:   #EFF0E8;
 $mediumgray:  #93948F;
 $darkgray:    #3A3B39;
 
