--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -34,7 +34,7 @@ $header-height-button: 2.5rem;
     position: relative;
     width: $header-height;
     height: $header-height;
-    border-left: 1px solid $offwhite;
+    border-left: 1px solid $lightgray;
 
     .account-thumb {
       position: absolute;
@@ -66,7 +66,7 @@ $header-height-button: 2.5rem;
       a {
         display: block;
         padding: 0.4rem 1.5rem;
-        border-bottom: 1px solid $offwhite;
+        border-bottom: 1px solid $lightgray;
         color: #111;
 
         &:last-of-type {
@@ -134,7 +134,7 @@ $header-height-button: 2.5rem;
         padding: 7px;
         font-size: 0.8rem;
         border-radius: 3px;
-        border: 1px solid darken($offwhite, 10%);
+        border: 1px solid darken($lightgray, 10%);
         margin-top: 0.25rem;
       }
 
