--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 html, body, input, button, textarea, select {
-  font-family: 'Avenir', sans-serif;
+  font-family: 'museo-sans', sans-serif;
   font-weight: 300;
 }
 
