--- a/client/scss/register.scss
+++ b/client/scss/register.scss
@@ -23,8 +23,8 @@
 
     h1 {
       font-weight: 700;
-      color: $red;
-      font-size: 3.5rem;
+      color: $darkgray;
+      font-size: 3rem;
       letter-spacing: -2px;
     }
 
@@ -36,7 +36,7 @@
     }
 
     h3 {
-      color: $darkgray;
+      color: $mediumgray;
       font-size: 1.6rem;
       line-height: 1.6rem;
       font-weight: 500;
