Registration now actually makes accounts. Linked it up with the server-side validation so now it displays errors like 'username already taken'.

--- a/client/scss/forms.scss
+++ b/client/scss/forms.scss
@@ -27,6 +27,7 @@ form {
       width: 100%;
       padding: 0 0.5rem;
       outline: none;
+      font-size: 0.9rem;
 
       &:focus {
         border-bottom: 3px solid $teal;
