Added account menu functionality, a few more skeleton routes. Having an annoying CSS issue with profile image x_x

--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -107,6 +107,7 @@ $header-height-button: 2.5rem;
       .log-out-link {
         font-size: 0.7rem;
         font-weight: 500;
+        cursor: pointer;
       }
     }
   }
