--- a/client/scss/header.scss
+++ b/client/scss/header.scss
@@ -61,6 +61,7 @@ $header-height-button: 2.5rem;
       border: 0;
       background-size: cover;
       background-position: center center;
+      background-image: url('/images/avatars/animal-03.png');
       border-radius: 100%;
     }
 
