--- a/client/scss/game.scss
+++ b/client/scss/game.scss
@@ -1,14 +1,25 @@
 @import 'variables';
 
+$gutter-width: 8px;
 $square-size: 50px;
 $num-of-squares: 12;
+$board-width: $square-size * $num-of-squares + ($gutter-width * 2);
 $tile-size: 42px;
+$side-panel-width: 280px;
+$game-width: $board-width + ( $gutter-width * 2 ) + $side-panel-width;
 
 #game {
+  position: relative;
+  left: 0;
+  right: 0;
+  margin: 1rem auto;
+  width: $game-width;
+
   #board {
     // TODO: Make this a little more responsive
-    width:  $square-size * $num-of-squares;
-    height: $square-size * $num-of-squares;
+    width:  $board-width;
+    height: $board-width;
+    padding: $gutter-width;
     display: flex;
     flex-wrap: wrap;
     background: $lightgray;
@@ -18,8 +29,17 @@ $tile-size: 42px;
       width: $square-size;
       height: $square-size;
       background: $white;
-      border: 1px solid $mediumgray;
+      border-top: 1px solid #CCC;
+      border-left: 1px solid #CCC;
 
+      // Only the right-edge ones should have a right border
+      // Unfortunately I need to hardcode the number of squares here =(
+      &:nth-child(12n) {
+        border-right: 1px solid #CCC;
+      }
+      &:nth-child(n+133) {
+        border-bottom: 1px solid #CCC;
+      }
     }
 
     .tile {
@@ -35,10 +55,35 @@ $tile-size: 42px;
       text-align: center;
       font-size: $tile-size * 0.5;
       font-weight: 700;
-      background: $red;
-      color: $white;
+      background: $yellow;
+      color: $darkgray;
       cursor: default;
       border-radius: 3px;
     }
+  }
+
+  #side-panel {
+    background: $white;
+    width: $side-panel-width;
+    min-height: 500px;
+    float: right;
+    padding: $gutter-width;
+
+    .side-panel-title {
+      background: $red;
+      color: $white;
+      font-size: 1.25rem;
+      text-align: center;
+      padding: 1rem;
+
+    }
+  }
+
+  #tile-rack {
+    position: relative;
+    top: $gutter-width * 2;
+    width: $board-width;
+    height: 100px; // temp
+    background: $white;
   }
 }
