--- a/client/scss/game.scss
+++ b/client/scss/game.scss
@@ -174,7 +174,14 @@ $game-width: $board-width + ( $gutter-width * 2 ) + $side-panel-width;
         }
       }
     }
+  }
 
-
+  .square-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.1);
   }
 }
