Started working on the gamesList component and associated logic. Styled slightly, and includes a helper to fetch players associated with a game. Still needs to be added to the publication, though.

--- a/client/scss/components.scss
+++ b/client/scss/components.scss
@@ -35,6 +35,15 @@
   }
 }
 
+.center-section {
+  position: relative;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 100%;
+  max-width: $max-width;
+}
+
 .card {
   background: $white;
   border-radius: 2px;
