--- a/client/scss/games_list.scss
+++ b/client/scss/games_list.scss
@@ -44,5 +44,26 @@
       padding: 0.4rem;
       border-bottom: 1px solid $lightgray;
     }
+
+    .game-list-player {
+      display: block;
+      line-height: 1.5rem;
+      margin-bottom: 0.25rem;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+
+      .player-avatar {
+        width: 1.5rem;
+        height: 1.5rem;
+        float: left;
+        margin-right: 0.5rem;
+        border-radius: 100%;
+        background-size: cover;
+        background-position: center center;
+
+      }
+    }
   }
 }
