--- a/client/scss/games_list.scss
+++ b/client/scss/games_list.scss
@@ -23,6 +23,10 @@
       background: $navy;
       font-size: 16px;
       font-weight: 500;
+
+      &:disabled {
+        background: $darkgray;
+      }
     }
   }
 
