Styled the players sidebar

--- a/client/scss/game.scss
+++ b/client/scss/game.scss
@@ -97,7 +97,6 @@ $game-width: $board-width + ( $gutter-width * 2 ) + $side-panel-width;
     width: $side-panel-width;
     min-height: 500px;
     float: right;
-    padding: $gutter-width;
 
     .side-panel-title {
       background: $navy;
@@ -105,7 +104,53 @@ $game-width: $board-width + ( $gutter-width * 2 ) + $side-panel-width;
       font-size: 1.25rem;
       text-align: center;
       padding: 1rem;
+    }
 
+    $player-row-height: 2rem;
+    $player-row-padding: 0.25rem;
+
+    .side-panel-players {
+      background: $darkgray;
+      color: $white;
+      padding: $gutter-width;
+
+      .side-panel-player {
+        position: relative;
+        line-height: $player-row-height;
+        padding: $player-row-padding;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+        font-size: 0.8rem;
+
+        &:first-of-type {
+          .points {
+            color: $yellow;
+          }
+        }
+
+        &:last-of-type {
+          border-bottom: 0;
+        }
+
+        .avatar {
+          width: $player-row-height;
+          height: $player-row-height;
+          border-radius: 100%;
+          float: left;
+          margin-right: 0.6rem;
+          background-size: cover;
+          background-position: center center;
+        }
+
+        .points {
+          position: absolute;
+          font-weight: bold;
+          color: $mediumgray;
+          top: $player-row-padding;
+          right: $player-row-padding;
+          bottom: $player-row-padding;
+        }
+
+      }
     }
   }
 
