Updated the tile drag-and-drop to only work when it's the active player's turn. Added a CSS class to represent it being draggable with the  cursor. Extracted the 'isMyTurn' logic into the game module, used it for the bottom controls bar.

--- a/client/scss/game.scss
+++ b/client/scss/game.scss
@@ -17,10 +17,12 @@ $game-width: $board-width + ( $gutter-width * 2 ) + $side-panel-width;
   width: $size;
   height: $size;
   background: $yellow;
-  cursor: move;
+  cursor:default;
   border-radius: 3px;
   border-right: 3px solid #BDA259;
   border-bottom: 3px solid #BDA259;
+
+  &.draggable { cursor: move; }
 
   .tile-letter {
     position: absolute;
